Working on Dockerisation

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,5 @@
 # pull official base image
-FROM python
+FROM python:latest
 
 # set work directory
 WORKDIR /usr/src/app
@@ -9,8 +9,8 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
-RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev
+RUN apt-get update \
+    && apt-get --assume-yes install musl-dev netcat-traditional
 
 # install dependencies
 RUN pip install --upgrade pip
