--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: ./app
       dockerfile: Dockerfile.prod
-    command: gunicorn hello_django.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn eduverse_backend.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - static_volume:/home/app/web/staticfiles
       - media_volume:/home/app/web/mediafiles
@@ -14,7 +14,7 @@ services:
     depends_on:
       - db
   db:
-    image: postgres
+    image: postgres:alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
