Call the collectstatic command when building image

--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -62,6 +62,7 @@ RUN chmod +x  $APP_HOME/entrypoint.prod.sh
 
 # copy project
 COPY . $APP_HOME
+RUN python3 manage.py collectstatic
 
 # chown all the files to the app user
 RUN chown -R app:app $APP_HOME
