--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
 
     listen 80;
 
-    location / {
+    location ~ ^/(admin|api) {
         proxy_pass http://eduverse;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
