--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -62,7 +62,7 @@ RUN chmod +x  $APP_HOME/entrypoint.prod.sh
 
 # copy project
 COPY . $APP_HOME
-RUN python3 manage.py collectstatic
+RUN python3 manage.py collectstatic --no-input
 
 # chown all the files to the app user
 RUN chown -R app:app $APP_HOME
