Added client app and its nginx & docker configs

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,13 @@ upstream eduverse {
 server {
 
     listen 80;
+    charset utf-8;
+    root   /usr/share/nginx/html;
+    index  index.html;
+
+    location / {
+        try_files $uri $uri/ =404;
+    }
 
     location ~ ^/(admin|api) {
         proxy_pass http://eduverse;
